--- a/nginx/index.html
+++ b/nginx/index.html
@@ -22,7 +22,7 @@
     <body>
         <div class="container">
             <h1>rick-ml</h1>
-            <p class="lead">An orchestration of independent services — quick links to the running apps below.</p>
+            <p class="lead">An orchestration of independent services - quick links to the running apps below.</p>
             <div class="links">
                 <ul>
                     <li><a class="btn" href="/visualizer/">Prediction Visualizer</a></li>
